<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/screen_background">

    <View
        android:id="@+id/ic_app"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_activity_title_label_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/create_activity"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ic_app"
        app:layout_constraintStart_toEndOf="@id/ic_app"
        app:layout_constraintTop_toTopOf="@id/ic_app" />

    <TextView
        android:id="@+id/tv_select_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/select_a_category"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/ic_app"
        app:layout_constraintTop_toBottomOf="@id/ic_app" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_activity_bottom_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_category_label"
        tools:listitem="@layout/item_category" />

    <TextView
        android:id="@+id/tv_activity_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/from_a_name_to_activity"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/rv_category_activity_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@id/rv_category_activity_bottom_sheet" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_title_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_name_e_g_pedaling"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/what_duration"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/til_activity_title"
        app:layout_constraintTop_toBottomOf="@id/til_activity_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_duration_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration_e_g_45"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_two_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/what_distance"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/til_duration"
        app:layout_constraintTop_toBottomOf="@id/til_duration" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_text_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_two_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_text_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/distance_hint"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_text_two">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_activity_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_line"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_category_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_activity_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_filled"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_category_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>