<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/screen_background">

    <View
        android:id="@+id/ic_app"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_label_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/create_category"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ic_app"
        app:layout_constraintStart_toEndOf="@id/ic_app"
        app:layout_constraintTop_toTopOf="@id/ic_app" />

    <TextView
        android:id="@+id/tv_select_icon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_an_icon_to_represent_your_category"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/ic_app"
        app:layout_constraintTop_toBottomOf="@+id/ic_app" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_bottom_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_select_icon_label"
        app:layout_constraintTop_toBottomOf="@id/tv_select_icon_label"
        tools:listitem="@layout/item_category" />

    <TextView
        android:id="@+id/tv_select_color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_a_color_for_the_category"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/rv_category_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@id/rv_category_bottom_sheet" />

    <LinearLayout
        android:id="@+id/ll_category_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/rv_category_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@id/tv_select_color_label">

        <View
            android:id="@+id/circle_blue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_color_blue" />

        <View
            android:id="@+id/circle_green"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_color_green" />

        <View
            android:id="@+id/circle_maroon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_color_maroon" />

        <View
            android:id="@+id/circle_orange"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_color_orange" />

        <View
            android:id="@+id/circle_purple"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_color_purple" />

        <View
            android:id="@+id/circle_red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_color_red" />

        <View
            android:id="@+id/circle_yellow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_color_yellow" />


        <View
            android:id="@+id/circle_pink"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_color_pink" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_category_color">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_line"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_category_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_filled"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_category_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>